operator/config/control-plane/patches/enable_webhooks_in_deployment.yaml
# This patch inject a sidecar container which is a HTTP proxy for the
# controller manager, it performs RBAC authorization against the Kubernetes API using SubjectAccessReviews.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-manager
  namespace: system
spec:
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeInboundPorts: "9443"
    spec:
      containers:
        - name: manager
          args:
            - --leader-elect
            - --enable-webhooks
