operator/config/control-plane/patches/gateway_delete.yaml
$patch: delete
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: lifecycle-manager-kyma-gateway
